Firefox and overflow issues solved

--- a/frontend/materialize/sass/components/_SvgIcons.scss
+++ b/frontend/materialize/sass/components/_SvgIcons.scss
@@ -196,6 +196,7 @@
   background-position:50%;
   width:100%;
   height:10px;
+  left: 0px;
 }
 
 @media #{$medium-and-down}{
